--- a/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
+++ b/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
@@ -7,3 +7,9 @@ support: rapid7
 status: []
 tags:
 - enrichment
+attributes:
+  source_url: https://github.com/rapid7/insightconnect-workflows
+  license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
+  support_url:
+  issue_url:
+  external_url:
