--- a/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
+++ b/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
@@ -7,6 +7,6 @@ support: rapid7
 status: []
 tags:
 - enrichment
-attributes:
+resources:
   source_url: https://github.com/rapid7/insightconnect-workflows
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
