Rename for style

--- a/workflows/Look_Up_IPs_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_IPs_with_Recorded_Future/workflow.spec.yaml
@@ -1,4 +1,4 @@
-name: Look Up IPs with Recorded Future
+name: Look_Up_IPs_with_Recorded_Future
 title: "Look Up IPs with Recorded Future"
 description: "This workflow enriches an IDR alert by performing a lookup on all IPs in the investigation with Recorded Future."
 version: 1.0.0
