Fix source code links and update workflow style

--- a/workflows/Malicious_Hash_Remediation_with_Cb_Response/workflow.spec.yaml
+++ b/workflows/Malicious_Hash_Remediation_with_Cb_Response/workflow.spec.yaml
@@ -1,11 +1,12 @@
-name: Spearphishing_Remediation_with_Mimecast
-title: "Spearphishing_Remediation_with_Mimecast"
-description: "IDR provides built-in machine learning based detections of spearphishing attempts through DNS queries to spoofed domains. On alert generation, this workflow automatically blocks a sender and creates a managed URL in Mimecast."
+name: Malicious_Hash_Remediation_with_Cb_Response
+title: "Malicious Hash Remediation with Cb Response"
+description: "This workflow triggers off of InsightIDR's Malicious Hash on Asset alerts and does a lookup of the hash with Team Cymru before banning it with Cb Response"
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: ["supported"]
 tags:
-- phishing
-- email
-- mimecast
+- cb
+- hash
+- insightidr
+- carbonblack
