--- a/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
+++ b/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
@@ -1,3 +1,5 @@
+extension: workflow
+product: ["insightconnect"]
 name: Automated_Indicator_Enrichment
 title: "Automated Indicator Enrichment"
 description: "This workflow triggers from directly slack messaging the chatbot to \"!investigate\" the defined indicator. To date, this workflow supports automatically looking up URLs and IPs in open source threat intelligence such as VirusTotal and Whois. Lastly, the workflow will post back results to the specific user."
