--- a/workflows/Spearphishing_Remediation_with_Mimecast/workflow.spec.yaml
+++ b/workflows/Spearphishing_Remediation_with_Mimecast/workflow.spec.yaml
@@ -10,4 +10,8 @@ status: ["supported"]
 tags:
 - phishing
 - email
+hub_tags:
+  use_cases: []
+  keywords: [phishing, email]
+  features: []
 - mimecast
