--- a/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
+++ b/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
@@ -9,6 +9,10 @@ support: rapid7
 status: []
 tags:
 - enrichment
+hub_tags:
+  use_cases: []
+  keywords: [enrichment]
+  features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
