--- a/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
@@ -11,6 +11,10 @@ tags:
 - enrichment
 - recorded future
 - domain
+hub_tags:
+  use_cases: []
+  keywords: [enrichment, recorded future, domain]
+  features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
