update use cases

--- a/workflows/InsightIDR_Create_Incident_Report_in_ServiceNow/workflow.spec.yaml
+++ b/workflows/InsightIDR_Create_Incident_Report_in_ServiceNow/workflow.spec.yaml
@@ -12,7 +12,7 @@ tags:
 - ticket
 - insightidr
 hub_tags:
-  use_cases: [ticketing , generate_ticket ]
+  use_cases: [remediation_ticketing , threat_detection_and_response ]
   keywords: [servicenow, ticket, insightidr]
   features: []
 resources:
