--- a/workflows/InsightIDR_Enable_User_in_Active_Directory/workflow.spec.yaml
+++ b/workflows/InsightIDR_Enable_User_in_Active_Directory/workflow.spec.yaml
@@ -14,7 +14,7 @@ tags:
 - enable
 - user_management
 hub_tags:
-  use_cases: [user_management]
+  use_cases: [user_management, threat_detection_and_response]
   keywords: [insightidr, ldap, ad, active_directory]
   features: []
 resources:
