--- a/workflows/InsightIDR_Create_Issue_in_Jira/workflow.spec.yaml
+++ b/workflows/InsightIDR_Create_Issue_in_Jira/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-product: ["insightconnect"]
+product: [insightconnect, insightidr]
 name: InsightIDR_Create_Issue_in_Jira
 title: "InsightIDR Create Issue in Jira"
 description: "This workflow creates an issue in Jira from a triggered incident from InsightIDR"
@@ -16,5 +16,5 @@ hub_tags:
   keywords: [jira, insightidr, ticketing]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows
+  source_url: https://github.com/rapid7/insightconnect-workflows/blob/master/InsightIDR_Create_Issue_in_Jira
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
