--- a/workflows/InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins/workflow.spec.yaml
+++ b/workflows/InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins/workflow.spec.yaml
@@ -1,8 +1,8 @@
 extension: workflow
-product: ["insightconnect"]
+product: [insightconnect, insightidr]
 name: InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins
 title: "InsightIDR Enrich Alert Data with Open Source Plugins"
-description: "Workflow that attempts to enrich all following IoCs (IPs, Domains, URLs, Hashes), if available. Can be associated with almost any alert."
+description: "Workflow that attempts to enrich all following IoCs (IPs, Domains, URLs, Hashes), if available. It can be associated with almost any alert."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
@@ -14,7 +14,7 @@ tags:
 - hash
 - domain
 hub_tags:
-  use_cases: []
+  use_cases: [soar, soc_automation]
   keywords: [insightidr, enrichment, analysis, hash, domain]
   features: []
 resources:
