--- a/workflows/InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins/workflow.spec.yaml
+++ b/workflows/InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins/workflow.spec.yaml
@@ -14,7 +14,7 @@ tags:
 - hash
 - domain
 hub_tags:
-  use_cases: [soar, soc_automation]
+  use_cases: [soar, soc_automation, siem, threat_detection_and_response, threat_intel]
   keywords: [insightidr, enrichment, analysis, hash, domain]
   features: []
 resources:
