--- a/workflows/InsightIDR_Disable_User_in_Active_Directory/workflow.spec.yaml
+++ b/workflows/InsightIDR_Disable_User_in_Active_Directory/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-product: ["insightconnect"]
+product: [insightconnect, insightidr]
 name: InsightIDR_Disable_User_in_Active_Directory
 title: "InsightIDR Disable User in Active Directory"
 description: "Disable user in Active Directory from a triggered alert in InsightIDR"
@@ -16,9 +16,9 @@ tags:
 - disable
 - deprovision
 hub_tags:
-  use_cases: [user_management]
+  use_cases: [soar, soc_automation, user_management, siem]
   keywords: [insightidr, ldap, ad, activedirectory, user, disable, deprovision]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/InsightIDR_Disable_User_in_Active_Directory
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
