Update per review

--- a/workflows/InsightIDR_Disable_User_in_Active_Directory/workflow.spec.yaml
+++ b/workflows/InsightIDR_Disable_User_in_Active_Directory/workflow.spec.yaml
@@ -16,7 +16,7 @@ tags:
 - disable
 - deprovision
 hub_tags:
-  use_cases: [soar, soc_automation, user_management, siem]
+  use_cases: [soar, soc_automation, user_management, siem, threat_detection_and_response]
   keywords: [insightidr, ldap, ad, activedirectory, user, disable, deprovision]
   features: []
 resources:
