--- a/workflows/InsightIDR_Unisolate_Sensor_in_Cb_Response/workflow.spec.yaml
+++ b/workflows/InsightIDR_Unisolate_Sensor_in_Cb_Response/workflow.spec.yaml
@@ -12,9 +12,9 @@ tags:
 - insightidr
 - remove isolation
 hub_tags:
-  use_cases: []
+  use_cases: [soar, soc_automation, siem, detection_and_response, threat_detection_and_response]
   keywords: [cb Response, insightidr, remove isolation]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows
+  source_url: https://github.com/rapid7/insightconnect-workflows/blob/master/InsightIDR_Unisolate_Sensor_in_Cb_Response
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
