--- a/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
+++ b/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
@@ -9,10 +9,13 @@ support: rapid7
 status: []
 tags:
 - enrichment
+- slack
+- url
+- ip
 hub_tags:
-  use_cases: []
-  keywords: [enrichment]
+  use_cases: [soar, soc_automation, chat_ops, alerting_and_notifications, threat_detection_and_response]
+  keywords: [enrichment, slack, url, ip]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Automated_Indicator_Enrichment
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
