--- a/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
@@ -12,9 +12,9 @@ tags:
 - recorded future
 - domain
 hub_tags:
-  use_cases: []
+  use_cases: [soar, threat_intel, soc_automation]
   keywords: [enrichment, recorded future, domain]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Look_Up_Domains_with_Recorded_Future
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
