--- a/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
+++ b/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
@@ -6,13 +6,16 @@ description: "This workflow will scan a Microsoft Teams channel for `!check_url 
 version: 1.0.0
 vendor: rapid7
 support: rapid7
-status: ["supported"]
+status: []
 tags:
 - microsoft_teams
 - teams
 - virustotal
 - chat
 hub_tags:
-  use_cases: []
+  use_cases: [soar, soc_automation, chat_ops, threat_intel]
   keywords: [chat, microsoft_teams, teams, virustotal]
   features: []
+resources:
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Microsoft_Teams_URL_Analysis
+  license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
