--- a/workflows/Splunk_App_SSH_Alert_IP_Enrichment/workflow.spec.yaml
+++ b/workflows/Splunk_App_SSH_Alert_IP_Enrichment/workflow.spec.yaml
@@ -12,9 +12,9 @@ tags:
 - email
 - office365
 hub_tags:
-  use_cases: []
+  use_cases: [soar, soc_automation, threat_intel, siem]
   keywords: [phishing, email, office365]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Splunk_App_SSH_Alert_IP_Enrichment
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
