--- a/workflows/InsightIDR_Unisolate_Sensor_in_Cb_Response/workflow.spec.yaml
+++ b/workflows/InsightIDR_Unisolate_Sensor_in_Cb_Response/workflow.spec.yaml
@@ -12,7 +12,7 @@ tags:
 - insightidr
 - remove isolation
 hub_tags:
-  use_cases: [soar, soc_automation, siem, detection_and_response, threat_detection_and_response]
+  use_cases: [soar, soc_automation, siem, threat_detection_and_response]
   keywords: [cb Response, insightidr, remove isolation]
   features: []
 resources:
