Product key is an array, make plural

--- a/workflows/InsightIDR_Create_Incident_Report_in_ServiceNow/workflow.spec.yaml
+++ b/workflows/InsightIDR_Create_Incident_Report_in_ServiceNow/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-product: [insightconnect, insightidr]
+products: [insightconnect, insightidr]
 name: InsightIDR_Create_Incident_Report_in_ServiceNow
 title: "InsightIDR Create Incident Report in ServiceNow"
 description: "This workflow creates an incident report in ServiceNow."
