--- a/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
+++ b/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-product: ["insightconnect"]
+products: ["insightconnect"]
 name: Microsoft_Teams_URL_Analysis
 title: "Microsoft Teams URL Analysis"
 description: "This workflow will scan a Microsoft Teams channel for `!check_url http://example.url`. When the workflow dectects a message matching that signature, it will automatically scan the URL in VirusTotal and return the results to Microsoft Teams."
