--- a/workflows/InsightIDR_Isolate_Sensor_in_Cb_Response/workflow.spec.yaml
+++ b/workflows/InsightIDR_Isolate_Sensor_in_Cb_Response/workflow.spec.yaml
@@ -12,7 +12,7 @@ tags:
 - isolate
 - insightidr
 hub_tags:
-  use_cases: [soar, soc_automation, siem, detection_and_response, threat_detection_and_response]
+  use_cases: [soar, soc_automation, siem, threat_detection_and_response]
   keywords: [cb_response, isolate, insightidr]
   features: []
 resources:
