--- a/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
+++ b/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
@@ -11,3 +11,6 @@ hub_tags:
   use_cases: []
   keywords: [insightvm, vulnerability management, bmc]
   features: []
+resources:
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Create_Incidents_from_InsightVM's_Top_Remediations.icon
+  license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
