--- a/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
+++ b/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
@@ -8,8 +8,8 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: []
-  keywords: [insightvm, vulnerability management, bmc]
+  use_cases: [application_security, patch_management, remediation_prioritization, remediation_ticketing, soar]
+  keywords: [vulnerability management, bmc]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Create_Incidents_from_InsightVM's_Top_Remediations.icon
