--- a/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
+++ b/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-product: ["insightconnect"]
+products: [insightconnect]
 name: Create_BMC_Incident_for_Top_Remediations_from_InsightVM
 title: "Create BMC Incident for Top Remediations from InsightVM"
 description: "This workflow will get the top remediations from InsightVM, and create a BMC Remedy ITSM Incident for each remediation. The Incident will have details on the affected endpoints as well as the Fix and risk score."
