Set new IDR workflows to both insightconnect and insightidr

--- a/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_Domains_with_Recorded_Future/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect"]
+products: [insightconnect, insightidr]
 name: Look_Up_Domains_with_Recorded_Future
 title: "Look Up Domains with Recorded Future"
 description: "This workflow enriches an IDR alert by performing a lookup on all domains in the investigation with Recorded Future."
