--- a/workflows/Look_Up_URLs_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_URLs_with_Recorded_Future/workflow.spec.yaml
@@ -1,5 +1,5 @@
 extension: workflow
-products: ["insightconnect"]
+products: [insightconnect, insightidr]
 name: Look_Up_URLs_with_Recorded_Future
 title: "Look Up URLs with Recorded Future"
 description: "This workflow enriches an IDR alert by performing a lookup on all URLs in the investigation with Recorded Future."
