--- a/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
+++ b/workflows/Automated_Indicator_Enrichment/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, chat_ops, alerting_and_notifications, threat_detection_and_response]
+  use_cases: [alerting_and_notifications, threat_detection_and_response]
   keywords: [enrichment, slack, url, ip]
   features: []
 resources:
