--- a/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
+++ b/workflows/Create_BMC_Incident_for_Top_Remediations_from_InsightVM/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [application_security, patch_management, remediation_prioritization, remediation_ticketing, soar]
+  use_cases: [devops, remediation_management]
   keywords: [bmc]
   features: []
 resources:
