--- a/workflows/InsightIDR_Create_Incident_Report_in_ServiceNow/workflow.spec.yaml
+++ b/workflows/InsightIDR_Create_Incident_Report_in_ServiceNow/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, remediation_ticketing, threat_detection_and_response]
+  use_cases: [remediation_management, threat_detection_and_response]
   keywords: [servicenow, ticket, insightidr]
   features: []
 resources:
