--- a/workflows/InsightIDR_Disable_User_in_Active_Directory/workflow.spec.yaml
+++ b/workflows/InsightIDR_Disable_User_in_Active_Directory/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, user_management, siem, threat_detection_and_response]
+  use_cases: [user_management, threat_detection_and_response]
   keywords: [insightidr, ldap, ad, activedirectory, user, disable, deprovision]
   features: []
 resources:
