--- a/workflows/InsightIDR_Enable_User_in_Active_Directory/workflow.spec.yaml
+++ b/workflows/InsightIDR_Enable_User_in_Active_Directory/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, siem, user_management, threat_detection_and_response, soc_automation]
+  use_cases: [threat_detection_and_response, user_management]
   keywords: [insightidr, ldap, ad, active_directory]
   features: []
 resources:
