--- a/workflows/InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins/workflow.spec.yaml
+++ b/workflows/InsightIDR_Enrich_Alert_Data_with_Open_Source_Plugins/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, siem, threat_detection_and_response, threat_intel]
+  use_cases: [threat_detection_and_response]
   keywords: [insightidr, enrichment, analysis, hash, domain]
   features: []
 resources:
