--- a/workflows/InsightIDR_Isolate_Sensor_in_Cb_Response/workflow.spec.yaml
+++ b/workflows/InsightIDR_Isolate_Sensor_in_Cb_Response/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, siem, threat_detection_and_response]
+  use_cases: [threat_detection_and_response]
   keywords: [cb_response, isolate, insightidr]
   features: []
 resources:
