--- a/workflows/InsightIDR_Suspend_User_in_Okta/workflow.spec.yaml
+++ b/workflows/InsightIDR_Suspend_User_in_Okta/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [user_management, soar, soc_automation, threat_detection_and_response]
+  use_cases: [user_management, threat_detection_and_response]
   keywords: [insightidr, okta, containment, deprovision, user]
   features: []
 resources:
