--- a/workflows/Look_Up_Hashes_with_Recorded_Future/workflow.spec.yaml
+++ b/workflows/Look_Up_Hashes_with_Recorded_Future/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, threat_intel, soc_automation]
+  use_cases: [threat_detection_and_response]
   keywords: [enrichment, recorded future, hash]
   features: []
 resources:
