--- a/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
+++ b/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, chat_ops, threat_intel]
+  use_cases: [alerting_and_notifications, threat_detection_and_response]
   keywords: [chat, microsoft_teams, teams, virustotal]
   features: []
 resources:
