--- a/workflows/Office_365_Analysis/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, phishing_investigations, soc_automation, threat_intel]
+  use_cases: [threat_detection_and_response]
   keywords: [phishing, email, office365]
   features: []
 resources:
