--- a/workflows/Spearphishing_Remediation_with_Office_365/workflow.spec.yaml
+++ b/workflows/Spearphishing_Remediation_with_Office_365/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [soar, soc_automation, phishing_investigations, threat_intel]
+  use_cases: [threat_detection_and_response]
   keywords: [phishing, email]
   features: []
 resources:
