--- a/workflows/InsightIDR_Unisolate_Sensor_in_Cb_Response/workflow.spec.yaml
+++ b/workflows/InsightIDR_Unisolate_Sensor_in_Cb_Response/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: [insightconnect, insightidr]
-name: Look_Up_Hashes_with_Recorded_Future
-title: "Look Up Hashes with Recorded Future"
+name: InsightIDR_Unisolate_Sensor_in_Cb_Response
+title: "InsightIDR Unisolate Sensor in Cb Response"
 description: "This workflow enriches an IDR alert by performing a lookup on all hashes in the investigation with Recorded Future."
 version: 1.0.0
 vendor: rapid7
@@ -9,8 +9,8 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [enrichment, recorded future, hash]
+  keywords: [cb Response, insightidr, remove isolation]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Look_Up_Hashes_with_Recorded_Future
+  source_url: https://github.com/rapid7/insightconnect-workflows/blob/master/InsightIDR_Unisolate_Sensor_in_Cb_Response
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
