--- a/workflows/Office_365_Analysis/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis/workflow.spec.yaml
@@ -14,3 +14,18 @@ hub_tags:
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Office_365_Analysis
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
+  screenshots:
+  - name: screenshots/Artifacts1.png
+    title: Artifact Example 1
+  - name: screenshots/Artifacts2.png
+    title: Artifact Example 2
+  - name: screenshots/Artifacts3.png
+    title: Artifact Example 3
+  - name: screenshots/InsightConnect1.png
+    title: Workflow Example 1
+  - name: screenshots/InsightConnect2.png
+    title: Workflow Example 2
+  - name: screenshots/InsightConnect3.png
+    title: Workflow Example 3
+  - name: screenshots/InsightConnect4.png
+    title: Workflow Example 4 with Optional Remediation
