--- a/workflows/Malicious_Hash_Remediation_with_Cb_Response/workflow.spec.yaml
+++ b/workflows/Malicious_Hash_Remediation_with_Cb_Response/workflow.spec.yaml
@@ -15,9 +15,9 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Malicious_Hash_Remediation_with_Cb_Response
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: screenshots/slack1.png
+  - name: slack1.png
     title: Slack Prompt
-  - name: screenshots/slack2.png
+  - name: slack2.png
     title: Slack Prompt Response
-  - name: screenshots/workflow1.png
+  - name: workflow1.png
     title: Workflow View
