--- a/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire/workflow.spec.yaml
@@ -15,21 +15,21 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: screenshots/artifacts1.png
+  - name: artifacts1.png
     title: Artifact Example 1
-  - name: screenshots/artifacts2.png
+  - name: artifacts2.png
     title: Artifact Example 2
-  - name: screenshots/artifacts3.png
+  - name: artifacts3.png
     title: Artifact Example 3
-  - name: screenshots/workflow1.png
+  - name: workflow1.png
     title: Workflow View 1
-  - name: screenshots/workflow2.png
+  - name: workflow2.png
     title: Workflow View 2
-  - name: screenshots/workflow3.png
+  - name: workflow3.png
     title: Workflow View 3
-  - name: screenshots/workflow_file_loop.png
+  - name: workflow_file_loop.png
     title: Workflow View 4
-  - name: screenshots/workflow_url_loop_inner.png
+  - name: workflow_url_loop_inner.png
     title: Workflow View 5
-  - name: screenshots/workflow_url_loop_outer.png
+  - name: workflow_url_loop_outer.png
     title: Workflow View 6
