--- a/workflows/Spearphishing_Remediation_with_Office_365/workflow.spec.yaml
+++ b/workflows/Spearphishing_Remediation_with_Office_365/workflow.spec.yaml
@@ -15,13 +15,13 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Spearphishing_Remediation_with_Office_365
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: screenshots/o3651.png
+  - name: o3651.png
     title: Office365 Compliance Search
-  - name: screenshots/o3652.png
+  - name: o3652.png
     title: Office365 Remediation Rule
-  - name: screenshots/slack1.png
+  - name: slack1.png
     title: Slack Prompt 1
-  - name: screenshots/workflow1.png
+  - name: workflow1.png
     title: Workflow View 1
-  - name: screenshots/workflow2.png
+  - name: workflow2.png
     title: Workflow View 2
