--- a/workflows/Splunk_App_SSH_Alert_IP_Enrichment/workflow.spec.yaml
+++ b/workflows/Splunk_App_SSH_Alert_IP_Enrichment/workflow.spec.yaml
@@ -15,9 +15,9 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Splunk_App_SSH_Alert_IP_Enrichment
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: screenshots/Artifacts1.png
+  - name: Artifacts1.png
     title: Artifact Example 1
-  - name: screenshots/Artifacts2.png
+  - name: Artifacts2.png
     title: Artifact Example 2
-  - name: screenshots/workflow1.png
+  - name: workflow1.png
     title: Workflow View 1
