Minor punctuation and added sample trigger to description.

--- a/workflows/InsightVM_Top_10_Vuln_Assets_to_Slack/workflow.spec.yaml
+++ b/workflows/InsightVM_Top_10_Vuln_Assets_to_Slack/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: InsightVM_Top_10_Vuln_Assets_to_Slack
 title: "Most Vulnerable Assets in Sites to Slack"
-description: "This workflow returns the top 10 most vulnerable assets in each site in InsightVM"
+description: "This workflow returns the top 10 most vulnerable assets in each site in InsightVM."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
