changes from review

--- a/workflows/Delete_O365_Emails_with_Slack/workflow.spec.yaml
+++ b/workflows/Delete_O365_Emails_with_Slack/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Delete_O365_Emails_With_Slack
 title: "Delete O365 Emails With Slack"
-description: "This workflow will delete emails matching given search criteria by sending a notification to InisghtConnect with Slack. The workflow will look for any emails that match the body, subject, for from contents given. It can either automatically delete these emails or prompt the user for further action."
+description: "This workflow will delete emails matching given search criteria by sending a notification to InisghtConnect with Slack."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
@@ -16,11 +16,11 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: screenshot1.png
-    title: Screenshot 1
+    title: Workflow 1
   - name: screenshot2.png
-    title: Screenshot 2
+    title: Workflow 2
   - name: screenshot3.png
-    title: Screenshot 3
+    title: Workflow 3
   - name: slack_flow_1.png
     title: Slack Message Flow
   - name: artifacts1.png
