--- a/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams
 title: "Force Password Reset in Azure AD from Microsoft Teams"
-description: Initiate Azure AD password resets from Microsoft Teams
+description: Initiate Azure AD password resets from Microsoft Teams.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
