--- a/workflows/Force_Password_Reset_in_Active_Directory_With_Slack/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Active_Directory_With_Slack/workflow.spec.yaml
@@ -22,4 +22,4 @@ resources:
   - name: Workflow1.png
     title: Workflow View One
   - name: Workflow2.png
-      title: Workflow View Two
+      title: Workflow View Part Two
