--- a/workflows/Force_Password_Reset_in_Active_Directory_With_Slack/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Active_Directory_With_Slack/workflow.spec.yaml
@@ -20,6 +20,6 @@ resources:
   - name: Slack_Job.png
       title: Example Slack Job Input and Output
   - name: Workflow1.png
-    title: Workflow View One
+    title: Workflow View Part One
   - name: Workflow2.png
       title: Workflow View Part Two
