--- a/workflows/Purge_Office_365_Emails_with_Teams/workflow.spec.yaml
+++ b/workflows/Purge_Office_365_Emails_with_Teams/workflow.spec.yaml
@@ -20,4 +20,4 @@ resources:
   - name: workflow2.png
     title: Workflow 2
   - name: teams_flow1.png
-    title: Example Teams output
+    title: Example Teams Output
