cleanup - purge office365 emails with slack
updated description, key features, setup, tags, and version history

--- a/workflows/Purge_Office_365_Emails_with_Slack/workflow.spec.yaml
+++ b/workflows/Purge_Office_365_Emails_with_Slack/workflow.spec.yaml
@@ -2,14 +2,14 @@ extension: workflow
 products: ["insightconnect"]
 name: Purge_Office_365_Emails_with_Slack
 title: "Purge Office 365 Emails with Slack"
-description: "This workflow will purge all emails in an organization matching given search criteria by sending a notification to InsightConnect with Slack."
-version: 1.0.0
+description: "This workflow uses a Slack command to purge all emails in an organization matching the provided search criteria."
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, office365, slack]
+  keywords: [phishing, email, office365, slack, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Purge_Office_365_Emails_with_Slack
