--- a/workflows/Open_Source_Indicator_Enrichment_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Open_Source_Indicator_Enrichment_with_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Open_Source_Indicator_Enrichment_with_Microsoft_Teams
 title: "Open Source Indicator Enrichment with Microsoft Teams"
-description: "Look up and enrich URLs, IP addresses, and hashes directly from Teams using open source threat intelligence tools such as Dig DNS and Whois."
+description: "Look up and enrich URLs, IP addresses, and hashes directly from Microsoft Teams using open source threat intelligence tools such as Dig, DNS, and Whois."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
