Geoip with ipstack from slack/teams
updated titles, trigger syntax, descriptions, key features, setup, usage, version

--- a/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
+++ b/workflows/GeoIP_Lookup_with_Slack/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: GeoIP_Lookup_with_Slack
-title: "GeoIP Lookup with Slack"
-description: This workflow accepts a Slack command and performs a GeoIP lookup using the IPStack plugin
-version: 1.0.1
+title: "Geolocate IP Address with IPStack from Slack"
+description: Geolocate an IP address using IPStack's geoip database with a simple Slack command.
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [geoip, location, chat, chatops, work_from_home, phishing]
+  keywords: [geoip, location, slack, chat, chatops, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/GeoIP_Lookup_with_Slack
