--- a/workflows/GeoIP_Lookup_with_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/GeoIP_Lookup_with_Microsoft_Teams/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: GeoIP_Lookup_with_Microsoft_Teams
-title: "GeoIP Lookup with Microsoft Teams"
-description: This workflow accepts a Microsoft Teams command and performs a GeoIP lookup using the IPStack plugin
-version: 1.0.0
+title: "Geolocate IP Address with IPStack from Microsoft Teams"
+description: Geolocate an IP address using IPStack's geoip database with a simple Microsoft Teams command.
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [data_enrichment, threat_detection_and_response]
-  keywords: [geoip, location, chat, chatops, work_from_home, phishing]
+  keywords: [geoip, location, chat, chatops, work_from_home, phishing, microsoft_teams]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/GeoIP_Lookup_with_Microsoft_Teams
